1. Change API so that we pass in the actual config file path into constructor of API instead of the folder path 2. some refactoring 3. Added JsonIgnore annotations to make sure derived fields are not written out to the access_log file 4. Previously files were not using the data_direcory parent path, they were using the config folder. This is fixed now.